DigIt CHANGE LOG
======================

2025/04/28 Updated ResizeImage;
           Resize is the Last Filter in LoadImage;
           UI Moved Page Resize Panel after Flip;
           PageSizes Menù Always Enabled;

        18 Updated Page Resize;
           Page Rotate/Flip/Resize in LoadImage;
           Added Target Platform sub paths to Languages;

        17 Page Size/Rotate/Flip always enabled on right roll;
           Added Page Fixed Size Combobox;
           Rotate/Flip reload Image when Changed in UI;
           Renamed TDigItFlip/Rotate to TDigItFilter_Flip/Rotate;
           Renamed function GetThumnailSize to GetProportionalSize;

        16 Solved Sources Wia/Twain Clear exception;
           First write of Re Take for Custom Mode;
           First write of PageRotate/Flip;

        15 Deleted actCrop and using only actCropNext;
	   First Write of ReTake for FullArea Mode;
	   Added Params to Counter_Inc/Dec;
	   Added SourceFiles_Clear method;
	   Added UI_SelectNext/CurrentCaptured;
	   Use of UI_SelectNext/CurrentCaptured in Crop Actions;

        14 Use of Single Counter;
	   Added diDataType_FileNameArray to distinguish the returned data in Take;
	   Added transition from one mode to another depending on the number of Crops;
	   Added Directly Crop the First File in CustomMode;

        11 Use of MM_OpenArrayList classes and interfaces in Sources;
	   Renamed IDigIt_ROArray to IDigIt_ArrayR_PChars;
	   Added IDigIt_Source_Items interface for future Source sub Items in Menù;
	   Sources Twain and WIA use a separeted class for DownloadedFiles;
	   UI Adjustments for Linux;
	   Changed File Sorting to flsSortNatural for Linux compatibility;

        10 Solved SaveExt not updated when User Change Format;
           Added SaveImage method in Main;
	   Use of GetFilesInDir in Source_Folder and old code cleanup;
	   Added other Useful function in Progress Form;
	   ExportFiles Updated SaveAsIMG to handle recursive paths;
