@@ -76,8 +76,8 @@
 {"hash":205527077,"name":"tdigit_main.acttimertake.caption","sourcebytes":[84,105,109,101,114,32,84,97,107,101],"value":"Timer Take"},
 {"hash":166899979,"name":"tdigit_main.acttakebuildduplex.caption","sourcebytes":[84,97,107,101,32,97,110,100,32,66,117,105,108,100,32,70,114,111,110,116,47,66,97,99,107],"value":"Take and Build Front/Back"},
 {"hash":44030676,"name":"tdigit_main.actcropnext.caption","sourcebytes":[67,114,111,112,32,43,32,78,101,120,116],"value":"Crop + Next"},
-{"hash":347380,"name":"tdigit_main.actcropgonext.caption","sourcebytes":[78,101,120,116],"value":"Next"},
-{"hash":296859,"name":"tdigit_main.actcropgoback.caption","sourcebytes":[66,97,99,107],"value":"Back"},
+{"hash":347380,"name":"tdigit_main.actgonext.caption","sourcebytes":[78,101,120,116],"value":"Next"},
+{"hash":296859,"name":"tdigit_main.actgoback.caption","sourcebytes":[66,97,99,107],"value":"Back"},
 {"hash":157435020,"name":"tdigit_main.actcropall.caption","sourcebytes":[67,114,111,112,32,65,108,108],"value":"Crop All"},
 {"hash":85538949,"name":"tdigit_main.actclearqueue.caption","sourcebytes":[67,108,101,97,114,32,87,111,114,107,32,81,117,101,117,101],"value":"Clear Work Queue"},
 {"hash":262937182,"name":"tdigit_main.actsessionnew.caption","sourcebytes":[78,101,119,32,87,111,114,107,32,83,101,115,115,105,111,110,32,46,46,46],"value":"New Work Session ..."},
