@@ -13,34 +13,34 @@ type
       rName: String;
       MinValue,
       rValue,
-      rUserData,
-      rValue_Previous: Integer;
+      rValue_Previous: DWord;
+      rUserData: Integer;
       rValue_StringPost,
       rValue_StringPre,
       formatString: String;
       rValue_StringDigits: Byte;
 
-      function GetValueNext: Integer;
-      procedure SetValue(AValue: Integer);
-      procedure SetValueNext(AValue: Integer);
+      function GetValueNext: DWord;
+      procedure SetValue(AValue: DWord);
+      procedure SetValueNext(AValue: DWord);
       procedure SetValue_StringDigits(AValue: Byte);
 
     public
-      constructor Create(AName:String; AMinValue:Integer=0); overload;
+      constructor Create(AName:String; AMinValue:DWord=0); overload;
 
       procedure Reset;
 
       function GetValue(nextValue: Boolean=False): String; overload;
-      function GetValue(AValue: Integer): String; overload;
+      function GetValue(AValue: DWord): String; overload;
 
       procedure Load(const XMLConf: TRttiXMLConfig; APath: String; LoadValues:Boolean);
       procedure Save(const XMLConf: TRttiXMLConfig; APath: String; SaveValues:Boolean);
 
     published
       property Name: String read rName write rName;
-      property Value: Integer read rValue write SetValue;
-      property Value_Next: Integer read GetValueNext write SetValueNext;
-      property Value_Previous: Integer read rValue_Previous write rValue_Previous;
+      property Value: DWord read rValue write SetValue;
+      property Value_Next: DWord read GetValueNext write SetValueNext;
+      property Value_Previous: DWord read rValue_Previous write rValue_Previous;
       property Value_StringDigits: Byte read rValue_StringDigits write SetValue_StringDigits;
       property Value_StringPre: String read rValue_StringPre write rValue_StringPre;
       property Value_StringPost: String read rValue_StringPost write rValue_StringPost;
@@ -51,12 +51,12 @@ implementation
 
 { TDigIt_Counter }
 
-function TDigIt_Counter.GetValueNext: Integer;
+function TDigIt_Counter.GetValueNext: DWord;
 begin
   Result:= rValue+1;
 end;
 
-procedure TDigIt_Counter.SetValue(AValue: Integer);
+procedure TDigIt_Counter.SetValue(AValue: DWord);
 begin
   if (rValue <> AValue) then
   begin
@@ -68,7 +68,7 @@ begin
   end;
 end;
 
-procedure TDigIt_Counter.SetValueNext(AValue: Integer);
+procedure TDigIt_Counter.SetValueNext(AValue: DWord);
 begin
   if (AValue > 0)
   then rValue:= AValue-1
@@ -84,7 +84,7 @@ begin
   end;
 end;
 
-constructor TDigIt_Counter.Create(AName: String; AMinValue: Integer);
+constructor TDigIt_Counter.Create(AName: String; AMinValue: DWord);
 begin
   inherited Create;
 
@@ -108,7 +108,7 @@ begin
   else Result := Format(formatString, [rValue_StringPre, rValue, rValue_StringPost]);
 end;
 
-function TDigIt_Counter.GetValue(AValue: Integer): String;
+function TDigIt_Counter.GetValue(AValue: DWord): String;
 begin
   Result := Format(formatString, [rValue_StringPre, AValue, rValue_StringPost]);
 end;
@@ -119,12 +119,12 @@ begin
   Name :=XMLConf.GetValue(APath+'Name', '');
   if LoadValues
   then begin
-         Value:=XMLConf.GetValue(APath+'Value', 0);
-         Value_Previous:=XMLConf.GetValue(APath+'Value_Previous', 0);
+         Value:=XMLConf.GetValue(APath+'Value', MinValue);
+         Value_Previous:=XMLConf.GetValue(APath+'Value_Previous', MinValue);
        end
   else begin
-         Value:= 0;
-         Value_Previous:= 0;
+         Value:= MinValue;
+         Value_Previous:= MinValue;
        end;
   Value_StringPre:=XMLConf.GetValue(APath+'Value_StringPre', '');
   Value_StringPost:=XMLConf.GetValue(APath+'Value_StringPost', '');
